src/lib/ra_parser/src/snapshots/ra_parser__tests__block_tree_test__syntax_comments_ra.snap
---
source: src/lib/ra_parser/src/tests.rs
expression: tree
---
[
  [
    "Root",
    [
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "Comment": [
                    " simply a one line comment",
                    false
                  ]
                },
                "position": [
                  [
                    1,
                    1
                  ],
                  [
                    1,
                    29
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "Comment": [
                    " fancy one line comment",
                    true
                  ]
                },
                "position": [
                  [
                    3,
                    1
                  ],
                  [
                    3,
                    27
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "Comment": [
                    "\n fancy multi line comment\n \n",
                    true
                  ]
                },
                "position": [
                  [
                    5,
                    1
                  ],
                  [
                    8,
                    4
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "Comment": [
                    "\nsimply \na multi line\ncomment\n",
                    false
                  ]
                },
                "position": [
                  [
                    10,
                    1
                  ],
                  [
                    14,
                    3
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "Comment": [
                    " на этом всё, ребята! 😇",
                    false
                  ]
                },
                "position": [
                  [
                    16,
                    1
                  ],
                  [
                    16,
                    26
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ]
    ]
  ]
]
