src/lib/ra_parser/src/snapshots/ra_parser__tests__block_tree_test__syntax_groups_ra.snap
---
source: src/lib/ra_parser/src/tests.rs
expression: tree
---
[
  [
    "Root",
    [
      [
        "Block",
        [
          [
            "Group",
            [
              [
                {
                  "Token": {
                    "kind": "OpenParentheses",
                    "position": [
                      [
                        1,
                        1
                      ],
                      [
                        1,
                        2
                      ]
                    ],
                    "level": 1
                  }
                }
              ],
              [
                {
                  "Token": {
                    "kind": "CloseParentheses",
                    "position": [
                      [
                        1,
                        2
                      ],
                      [
                        1,
                        3
                      ]
                    ],
                    "level": 1
                  }
                }
              ]
            ]
          ],
          [
            {
              "Token": {
                "kind": {
                  "Comment": [
                    " empty group expression",
                    false
                  ]
                },
                "position": [
                  [
                    1,
                    4
                  ],
                  [
                    1,
                    29
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            "Group",
            [
              [
                {
                  "Token": {
                    "kind": "OpenSquareBrace",
                    "position": [
                      [
                        2,
                        1
                      ],
                      [
                        2,
                        2
                      ]
                    ],
                    "level": 1
                  }
                }
              ],
              [
                {
                  "Token": {
                    "kind": "CloseSquareBrace",
                    "position": [
                      [
                        2,
                        2
                      ],
                      [
                        2,
                        3
                      ]
                    ],
                    "level": 1
                  }
                }
              ]
            ]
          ],
          [
            {
              "Token": {
                "kind": {
                  "Comment": [
                    " empty grouping",
                    false
                  ]
                },
                "position": [
                  [
                    2,
                    4
                  ],
                  [
                    2,
                    21
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            "Group",
            [
              [
                {
                  "Token": {
                    "kind": "OpenCurlyBrace",
                    "position": [
                      [
                        3,
                        1
                      ],
                      [
                        3,
                        2
                      ]
                    ],
                    "level": 1
                  }
                }
              ],
              [
                {
                  "Token": {
                    "kind": "CloseCurlyBrace",
                    "position": [
                      [
                        3,
                        2
                      ],
                      [
                        3,
                        3
                      ]
                    ],
                    "level": 1
                  }
                }
              ]
            ]
          ],
          [
            {
              "Token": {
                "kind": {
                  "Comment": [
                    " empty context group",
                    false
                  ]
                },
                "position": [
                  [
                    3,
                    4
                  ],
                  [
                    3,
                    26
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            "Group",
            [
              [
                {
                  "Token": {
                    "kind": "OpenParentheses",
                    "position": [
                      [
                        5,
                        1
                      ],
                      [
                        5,
                        2
                      ]
                    ],
                    "level": 1
                  }
                }
              ],
              [
                "Group",
                [
                  [
                    {
                      "Token": {
                        "kind": "OpenParentheses",
                        "position": [
                          [
                            5,
                            2
                          ],
                          [
                            5,
                            3
                          ]
                        ],
                        "level": 1
                      }
                    }
                  ],
                  [
                    {
                      "Token": {
                        "kind": {
                          "IntegerLiteral": 10
                        },
                        "position": [
                          [
                            5,
                            3
                          ],
                          [
                            5,
                            5
                          ]
                        ],
                        "level": 1
                      }
                    }
                  ],
                  [
                    {
                      "Token": {
                        "kind": "Plus",
                        "position": [
                          [
                            5,
                            6
                          ],
                          [
                            5,
                            7
                          ]
                        ],
                        "level": 1
                      }
                    }
                  ],
                  [
                    {
                      "Token": {
                        "kind": {
                          "IntegerLiteral": 2
                        },
                        "position": [
                          [
                            5,
                            8
                          ],
                          [
                            5,
                            9
                          ]
                        ],
                        "level": 1
                      }
                    }
                  ],
                  [
                    {
                      "Token": {
                        "kind": "Asterisk",
                        "position": [
                          [
                            5,
                            10
                          ],
                          [
                            5,
                            11
                          ]
                        ],
                        "level": 1
                      }
                    }
                  ],
                  [
                    {
                      "Token": {
                        "kind": {
                          "IntegerLiteral": 3
                        },
                        "position": [
                          [
                            5,
                            12
                          ],
                          [
                            5,
                            13
                          ]
                        ],
                        "level": 1
                      }
                    }
                  ],
                  [
                    {
                      "Token": {
                        "kind": "CloseParentheses",
                        "position": [
                          [
                            5,
                            13
                          ],
                          [
                            5,
                            14
                          ]
                        ],
                        "level": 1
                      }
                    }
                  ]
                ]
              ],
              [
                {
                  "Token": {
                    "kind": "Asterisk",
                    "position": [
                      [
                        5,
                        15
                      ],
                      [
                        5,
                        16
                      ]
                    ],
                    "level": 1
                  }
                }
              ],
              [
                {
                  "Token": {
                    "kind": {
                      "Identifier": "abc"
                    },
                    "position": [
                      [
                        5,
                        17
                      ],
                      [
                        5,
                        20
                      ]
                    ],
                    "level": 1
                  }
                }
              ],
              [
                {
                  "Token": {
                    "kind": "Plus",
                    "position": [
                      [
                        5,
                        21
                      ],
                      [
                        5,
                        22
                      ]
                    ],
                    "level": 1
                  }
                }
              ],
              [
                {
                  "Token": {
                    "kind": {
                      "IntegerLiteral": 222
                    },
                    "position": [
                      [
                        5,
                        23
                      ],
                      [
                        5,
                        26
                      ]
                    ],
                    "level": 1
                  }
                }
              ],
              [
                {
                  "Token": {
                    "kind": "CloseParentheses",
                    "position": [
                      [
                        5,
                        26
                      ],
                      [
                        5,
                        27
                      ]
                    ],
                    "level": 1
                  }
                }
              ]
            ]
          ]
        ]
      ],
      [
        "Block",
        [
          [
            "Group",
            [
              [
                {
                  "Token": {
                    "kind": "OpenSquareBrace",
                    "position": [
                      [
                        6,
                        1
                      ],
                      [
                        6,
                        2
                      ]
                    ],
                    "level": 1
                  }
                }
              ],
              [
                "Block",
                [
                  [
                    {
                      "Token": {
                        "kind": {
                          "Identifier": "L1"
                        },
                        "position": [
                          [
                            7,
                            5
                          ],
                          [
                            7,
                            7
                          ]
                        ],
                        "level": 2
                      }
                    }
                  ],
                  [
                    "Block",
                    [
                      [
                        {
                          "Token": {
                            "kind": {
                              "Identifier": "L2"
                            },
                            "position": [
                              [
                                8,
                                9
                              ],
                              [
                                8,
                                11
                              ]
                            ],
                            "level": 3
                          }
                        }
                      ],
                      [
                        "Block",
                        [
                          [
                            {
                              "Token": {
                                "kind": {
                                  "IntegerLiteral": 42
                                },
                                "position": [
                                  [
                                    9,
                                    13
                                  ],
                                  [
                                    9,
                                    15
                                  ]
                                ],
                                "level": 4
                              }
                            }
                          ]
                        ]
                      ]
                    ]
                  ]
                ]
              ],
              [
                {
                  "Token": {
                    "kind": "CloseSquareBrace",
                    "position": [
                      [
                        10,
                        1
                      ],
                      [
                        10,
                        2
                      ]
                    ],
                    "level": 1
                  }
                }
              ]
            ]
          ]
        ]
      ]
    ]
  ]
]
